Bug 505469 - Certain sources of Firefox show a 0.0 average rating with 0 reviews, but with correct bar charts and Show All Reviews contents
Summary: Certain sources of Firefox show a 0.0 average rating with 0 reviews, but with...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 6.2.5
Platform: SteamOS Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-11 11:23 UTC by ralf-speer
Modified: 2025-09-30 15:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
Photo of the Rating for Firefox (661.37 KB, image/jpeg)
2025-06-11 11:23 UTC, ralf-speer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ralf-speer 2025-06-11 11:23:51 UTC
Created attachment 182183 [details]
Photo of the Rating for Firefox

SUMMARY
I recently factory reset my Steamdeck. So I had to redownload Firefox via Discover.
There I noticed that Firefox has a 0.0 rating, even though there are Reviews with different Star Ratings.
It even lists how many 5 or 4 Star rating it has, but the Overall Score show a 0.0

(When I first tried to install Firefox, there was also a Problem with the gpg keys, which just went away after three attempts at downloading. This could be a Problem of the Deck, but just in case I am mentioning it.)

STEPS TO REPRODUCE
1. run Discover
2. Go to Firefox via Recommended/Searchbar

OBSERVED RESULT
There is a 0.0 Score but there are also ratings.

EXPECTED RESULT
A Score that is calculated from the accumalted ratings.

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: SteamOs 3.7.8 Build 2025022.2
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION

Discover Version: 6.2.5

I also made a post on kde help with some more details.
https://discuss.kde.org/t/firefox-has-in-the-reviews-section-a-0-0/35407
Comment 1 John Kizer 2025-06-11 16:34:22 UTC
This is a weird one - I can reproduce with Firefox on my Fedora KDE 42 device, Discover built from git master, but I can't find another application where this issue reproduces - and it does show the correct average on a duplicate listing for Fedora Flatpaks.

For what it's worth, when loading the Firefox page, there's one message printed to the terminal: couldn't find QList("mozilla-seamonkey.desktop", "org.mozilla.firefox") which is supposedly extended by "mozilla-noscript"

Thanks!
Comment 2 ralf-speer 2025-06-11 17:17:09 UTC
(In reply to John Kizer from comment #1)
> This is a weird one - I can reproduce with Firefox on my Fedora KDE 42
> device, Discover built from git master, but I can't find another application
> where this issue reproduces - and it does show the correct average on a
> duplicate listing for Fedora Flatpaks.
> 
> For what it's worth, when loading the Firefox page, there's one message
> printed to the terminal: couldn't find QList("mozilla-seamonkey.desktop",
> "org.mozilla.firefox") which is supposedly extended by "mozilla-noscript"
> 
> Thanks!

Yeah I guessed so. A Friend of mine also looked into it with his Steam Deck (Here it is an OLED Version, I have an LCD Version) and pretty much the same happened.
I could write a Support Ticket also for Valve. Is there anything I should test or try out on my Steamdeck? Can I provide some further Information?

If so just let me know :)
Comment 3 John Kizer 2025-06-11 18:26:38 UTC
(In reply to ralf-speer from comment #2)
> I could write a Support Ticket also for Valve. Is there anything I should
> test or try out on my Steamdeck? Can I provide some further Information?
> 
> If so just let me know :)

Thanks - I'll have to defer to developers with more knowledge of what might be causing this - something with the upstream server, or something in Discover itself. I'd be pretty surprised if it's SteamOS-specific, though, since I could reproduce the issue on my Fedora KDE 42 device running the current upstream KDE master version of Discover, without any SteamOS-specific components in use.
Comment 4 Nate Graham 2025-06-12 15:30:24 UTC
Can reproduce the issue right now on Fedora KDE 42 as well, albeit with everything KDE built from source on top of it.
Comment 5 Akseli Lahtinen 2025-09-30 08:05:43 UTC
Been looking into this bug. Somehow the rating field gets an empty rating: root.application.rating.packageName is empty.
Comment 6 Akseli Lahtinen 2025-09-30 12:58:40 UTC
Figured it out. Ratings file has `org.mozilla.Firefox` but we're looking for `org.mozilla.firefox`, so we need to likely make this case insensitive
Comment 7 Bug Janitor Service 2025-09-30 13:40:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1168
Comment 8 Akseli Lahtinen 2025-09-30 14:07:02 UTC
Git commit b780286a46bc0edae82e622330b67a474d0dcd96 by Akseli Lahtinen.
Committed on 30/09/2025 at 13:39.
Pushed by akselmo into branch 'master'.

OdrsReviewsBackend: Set all rating packagenames to lowercase

When comparing between ratings, we could end up in situations where
we're looking a rating for `org.mozilla.Firefox` but the package name
is reported as `org.mozilla.firefox`.

Due to QHash comparison being
case-sensitive, we should just set all ratings during parsing
into lowercase. Then also set the package names lowercase
when looking for them in the ratings hash.

M  +4    -3    libdiscover/appstream/OdrsReviewsBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/b780286a46bc0edae82e622330b67a474d0dcd96
Comment 9 Akseli Lahtinen 2025-09-30 15:04:54 UTC
Git commit eee1a63f870d4cc5ffc891aff566017505ea4c1f by Akseli Lahtinen.
Committed on 30/09/2025 at 14:07.
Pushed by akselmo into branch 'Plasma/6.5'.

OdrsReviewsBackend: Set all rating packagenames to lowercase

When comparing between ratings, we could end up in situations where
we're looking a rating for `org.mozilla.Firefox` but the package name
is reported as `org.mozilla.firefox`.

Due to QHash comparison being
case-sensitive, we should just set all ratings during parsing
into lowercase. Then also set the package names lowercase
when looking for them in the ratings hash.


(cherry picked from commit b780286a46bc0edae82e622330b67a474d0dcd96)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +4    -3    libdiscover/appstream/OdrsReviewsBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/eee1a63f870d4cc5ffc891aff566017505ea4c1f