OdrsReviewsBackend: Set all rating packagenames to lowercase

When comparing between ratings, we could end up in situations where
we're looking a rating for `org.mozilla.Firefox` but the package name
is reported as `org.mozilla.firefox`.

Due to QHash comparison being
case-sensitive, we should just set all ratings during parsing
into lowercase. Then also set the package names lowercase
when looking for them in the ratings hash.

BUG: 505469


(cherry picked from commit b780286a46bc0edae82e622330b67a474d0dcd96)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>